@@ -1,3 +1,7 @@
+* 2013-05-03 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26373: Sanitize on "delivery=view", too
+
 * 2013-04-30 - thorben.betten@open-xchange.com
 
  - Fix for bug 26244: Fixed XSS injection using utf-16 content type 
